# repoze.sphinx.autointerface

./: .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  ez_setup.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-tests.yml  pypi.yaml
repoze/sphinx/: autointerface.py
repoze/sphinx/tests/: test_autointerface.py  util.py
tests/unit/: test_autointerface.py  util.py
trunk/: CHANGES.txt  TODO.txt
trunk/repoze/sphinx/: autointerface.py
