[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "repoze-sphinx-autointerface"
version = "2.2dev0"
description = "Sphinx extension: auto-generates API docs from Zope interfaces"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
dependencies = [
    "zope.interface",
    "Sphinx >= 4.0",
]

authors = [
  {name = "Tres Seaver, Agendaless Consulting", email = "tseaver@agendaless.com"},
]
license = "LicenseRef-Repoze-BSD-derived"
license-files = ["LICENSE.txt"]

keywords = ["web", "wsgi", "zope", "sphinx"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
# Not supported by 'setuptools':
# import-namespaces = ["repoze"]
# import-names = ["repoze.sphinx""]

[project.urls]
Repository = "https://github.com/repoze/repoze.sphinx.autointerface"
Issues = "https://github.com/repoze/repoze.sphinx.autointerface/issues"
Documentation = "https://repozesphinxautointerface.readthedocs.io/en/stable/index.html"
Changelog = "https://github.com/repoze/repoze.sphinx.autointerface/blob/master/CHANGES.rst"

[project.entry-points."paste.filter_app_factory"]
retry = "repoze.retry:make_retry"

[dependency-groups]
dev = [
    "tox",
    "pytest",
    "pytest-cov",
    "ruff",
    "check-manifest",
    "build",
    "twine",
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
#minversion = "6.0"
testpaths = ["tests/unit"]
#addopts = "--cov=repoze.sphinx.autointerfae --cov=tests/unit --cov-branch --cov-fail-under=100"

[tool.coverage.run]
omit = []

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 79
exclude = [
]
target-version = "py314"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]
ignore = [
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.check-manifest]
ignore = [
    ".gitignore",
    ".gitattributes",
    "PKG-INFO",
    "*.egg-info",
    "*.egg-info/*",
    "setup.cfg",
]
ignore-default-rules = true
